--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,16 @@ a {
   text-decoration: none;
 }
 
+::selection {
+  background-color: #BFBFBF;
+  color: #260F01;
+}
+
+::-moz-selection {
+  background-color: #BFBFBF;
+  color: #260F01;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
